add_executable(12925 12925.cpp
        12937.cpp
        258707.cpp
        42584.cpp
        12939.cpp
        17686.cpp
        17684.cpp
        131704.cpp
        17679.cpp
        17679.cpp
        17680.cpp
        42889.cpp
        12981.cpp
        12980.cpp
        12916.cpp
        12982.cpp
        60058.cpp
        42888.cpp
        176963.cpp
        60059/60059.cpp
        72410/72410.cpp
        72412/72412.cpp)
